# hscp

./: README.md  dev-requirements.txt  hscp.py  pyproject.toml
.github/workflows/: tests.yml
tests/: __init__.py  test_all.py  test_async_hscp.py  test_hscp.py
