[tool.poetry]
name = "hscp"
version = "0.2.0"
description = "Client library for HyScores."
authors = ["moonburnt <moonburnt@disroot.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/moonburnt/hscp"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.27.1"
aiohttp = "3.8.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "7.1.2"
requests-mock = "1.9.3"
aioresponses = "0.7.2"
pytest-asyncio = "0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
